--- a/src/pages/details/style.module.css
+++ b/src/pages/details/style.module.css
@@ -44,3 +44,27 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.content .op_img{
+    display: flex;
+    flex-direction: column;
+}
+
+.imageCarousel {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.imageCarousel img {
+    width: 30rem;
+    height: 30rem;
+}
+
+.imageCarousel button {
+    background-color: transparent;
+    border: none; 
+    cursor: pointer; 
+    font-size: 24px; 
+    padding: 10px; 
+}
