--- a/src/pages/home/style.module.css
+++ b/src/pages/home/style.module.css
@@ -113,4 +113,19 @@
     background-color: rgb(207, 19, 19);
 }
 
+.container_modal_fav{
+    min-width: 600px;
+    min-height: 500px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
 
+.searchBar {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
